--- a/khodictionary/courses/templates/courses/course.html
+++ b/khodictionary/courses/templates/courses/course.html
@@ -45,7 +45,7 @@
                         </p>
 
             
-                        <a href="" class="btn btn-success">
+                        <a href="{% url 'courses:course_detail' course.id %}" class="btn btn-success">
                             Học ngay
                         </a>
                     </div>
