--- a/khodictionary/translate/templates/translate/translate.html
+++ b/khodictionary/translate/templates/translate/translate.html
@@ -177,7 +177,7 @@
         recognition.lang = "vi";
         recognition.interimResults = false;
         recognition.maxAlternatives = 1;
-
+        recognition.pause_threshold = 1.5;
         //var diagnostic = document.querySelector('.output');
         var diagnostic = document.querySelector(".translate");
         var bg = document.querySelector("html");
