--- a/khodictionary/courses/templates/courses/damthoai.html
+++ b/khodictionary/courses/templates/courses/damthoai.html
@@ -33,7 +33,7 @@
             </div>
         </div>
     </div>
-    <div class="container" style="height: 800px; min-height:30px">
+    <div class="container" style="height: auto; min-height:30px">
       <ul class="nav nav-tabs">
         <li class="nav-item">
            
@@ -47,9 +47,6 @@
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="{% url 'courses:damthoai' idbai %}" data-toggle="tab">Đàm thoại</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#" data-toggle="tab">Viết bài đàm thoại</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{% url 'courses:datcauhoi' idbai %}" data-toggle="tab">Đặt câu hỏi</a>
