--- a/khodictionary/courses/templates/courses/tuvung.html
+++ b/khodictionary/courses/templates/courses/tuvung.html
@@ -75,25 +75,23 @@
               
                 <div class="row">
                   <div class="container">
-                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                      <div class="carousel-inner">
-                        <div class="carousel-item">
-                          <img src="..." class="d-block w-100" alt="...">
+                    {% for a in tuvung %}
+                    <div class="card mb-3" style="max-width: 540px; margin: 0px auto">
+                      <div class="row g-0">
+                        <div class="col-md-4">
+                          <img src="{{ a.image.url }}" class="img-fluid rounded-start" height="auto" alt="...">
                         </div>
-                        <div class="carousel-item">
-                          <img src="..." class="d-block w-100" alt="...">
+                        <div class="col-md-8">
+                          <div class="card-body">
+                            <h5 class="card-title">Tiếng K'Ho: {{a.tiengkho}}</h5>
+                            <p class="card-text">Tiếng Việt:</b> {{a.tiengviet}}</p>
+                            <p class="card-text"><i>Phiên âm: {{a.phienam}}</i></p>
+                            <p class="card-text"><small class="text-muted">Ví dụ:</b> {{a.vidu}}</small></p>
+                          </div>
                         </div>
-                        
                       </div>
-                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                      </button>
-                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                      </button>
                     </div>
+                    {%endfor%}
                   </div>     
                 </div>
               {% endif %}
