--- a/khodictionary/dictionary/templates/dictionary/login.html
+++ b/khodictionary/dictionary/templates/dictionary/login.html
@@ -14,72 +14,44 @@
 
 </head>
 <body>
-  <div class="my-3 p-3 bg-body rounded shadow-sm" style="width: 500px; height: auto; margin: 0 auto; padding: 0 auto;">
+  <div class="my-3 p-3 bg-body rounded shadow-sm">
     <div class="limiter">
       <div class="container-login100">
         <div class="wrap-login100">
           <form class="login100-form validate-form" method="POST">
             {% csrf_token %}
-            <span class="login100-form-title p-b-49">
-              Login
+            <span class="login100-form-title">
+              Đăng nhập
             </span>
     
-            <div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
-              <span class="label-input100">Username</span>
+            <div class="wrap-input100 validate-input" data-validate = "Tên đăng nhập đã hoàn thành">
+              <span class="label-input100">Tên đăng nhập</span>
               <!-- <input class="input100" type="text" name="username" placeholder="Type your username"> -->
               {{ form.username }}
               <span class="focus-input100" data-symbol="&#xf206;"></span>
             </div>
     
-            <div class="wrap-input100 validate-input" data-validate="Password is required">
-              <span class="label-input100">Password</span>
+            <div class="wrap-input100 validate-input" data-validate="Mật khẩu đã hoàn thành">
+              <span class="label-input100">Mật khẩu</span>
               <!-- <input class="input100" type="password" name="pass" placeholder="Type your password"> -->
               {{ form.password }}
               <span class="focus-input100" data-symbol="&#xf190;"></span>
             </div>
-            
-            <div class="text-right p-t-8 p-b-31">
-              <a href="#">
-                Forgot password?
-              </a>
-            </div>
-            
+            <div class="text-right p-t-8 p-b-31"></div>
             <div class="container-login100-form-btn">
               <div class="wrap-login100-form-btn">
                 <div class="login100-form-bgbtn"></div>
                 <button class="login100-form-btn">
-                  Login
+                  Đăng nhập
                 </button>
               </div>
             </div>
-    
-            <div class="txt1 text-center p-t-54 p-b-20">
-              <span>
-                Or Login Using
-              </span>
-            </div>
-    
-            <div class="flex-c-m">
-              <a href="#" class="login100-social-item bg1">
-                <i class="fa fa-facebook"></i>
-              </a>
-    
-              <a href="#" class="login100-social-item bg2">
-                <i class="fa fa-twitter"></i>
-              </a>
-    
-              <a href="#" class="login100-social-item bg3">
-                <i class="fa fa-google"></i>
-              </a>
-            </div>
-    
             <div class="flex-col-c p-t-20">
               <span class="txt1 p-b-17">
-                Or Sign Up Using
+                Tạo tài khoản mới
               </span>
-    
               <a href="{% url 'dictionary:register' %}" class="txt2">
-                Sign Up
+                Đăng ký
               </a>
             </div>
           </form>
