--- a/khodictionary/dictionary/templates/dictionary/register.html
+++ b/khodictionary/dictionary/templates/dictionary/register.html
@@ -14,111 +14,76 @@
 
 </head>
 <body>
-    <!-- <center>
-        <form action="." method="POST">
-            {% csrf_token %}
-            {{form.as_p}}
-            <input type="submit" value="Đăng ký"/>
-        </form>
-    </center> -->
-    <div class="my-3 p-3 bg-body rounded shadow-sm" style="width: 500px; height: auto; margin: 0 auto; padding: 0 auto;">
+    <div class="my-3 p-3 bg-body rounded shadow-sm" style="width: 600px; height: auto; margin: 0 auto; padding: 0 auto;">
         <div class="limiter">
             <div class="container-login100">
                 <div class="wrap-login100">
                     <form class="login100-form validate-form" method="POST">
                         {% csrf_token %}
-                        <span class="login100-form-title p-b-49">
-                            Registration
+                        <span class="login100-form-title p-b-31">
+                            Đăng ký
                         </span>
         
-                        <div class="wrap-input100 validate-input m-b-23" data-validate = "Email is reauired">
-                            <span class="label-input100">First Name</span>
-                            <!-- <input class="input100" type="email" name="email" placeholder="Type your email"> -->
+                        <div class="wrap-input100 validate-input m-b-23" data-validate = "Tên đã hoàn thành">
+                            <span class="label-input100">Tên</span>
                             {{ form.firstname }}
                             <span class="focus-input100" data-symbol="&#xf206;"></span>
                         </div>
         
-                        <div class="wrap-input100 validate-input m-b-23" data-validate = "Email is reauired">
-                            <span class="label-input100">Last Name</span>
-                            <!-- <input class="input100" type="email" name="email" placeholder="Type your email"> -->
+                        <div class="wrap-input100 validate-input m-b-23" data-validate = "Họ đã hoàn thành">
+                            <span class="label-input100">Họ</span>
                             {{ form.lastname }}
                             <span class="focus-input100" data-symbol="&#xf206;"></span>
                         </div>
         
-                        <div class="wrap-input100 validate-input m-b-23" data-validate = "Email is reauired">
+                        <div class="wrap-input100 validate-input m-b-23" data-validate = "Email đã hoàn thành">
                             <span class="label-input100">Email</span>
                             <!-- <input class="input100" type="email" name="email" placeholder="Type your email"> -->
                             {{ form.email }}
-                            <span class="focus-input100" data-symbol="&#xf206;"></span>
+                            <span class="focus-input100" data-symbol="&#xf160;"></span>
                         </div>
         
-                        <div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
+                        <div class="wrap-input100 validate-input m-b-23" data-validate = "Tên đăng nhập đã hoàn thành">
                             {% if error %}
                                 <p style="color: red;">{{ error }}</p>
                             {% endif %}
-                            <span class="label-input100">Username</span>
+                            <span class="label-input100">Tên đăng nhập</span>
                             <!-- <input class="input100" type="text" name="username" placeholder="Type your username"> -->
                             {{ form.username }}
                             <span class="focus-input100" data-symbol="&#xf206;"></span>
                         </div>
         
-                        <div class="wrap-input100 validate-input" data-validate="Password is required">
-                            <span class="label-input100">Password</span>
+                        <div class="wrap-input100 validate-input m-b-23" data-validate="Mật khẩu đã hoàn thành">
+                            <span class="label-input100">Mật khẩu</span>
                             <!-- <input class="input100" type="password" name="pass" placeholder="Type your password"> -->
                             {{ form.password }}
                             <span class="focus-input100" data-symbol="&#xf190;"></span>
                         </div>
         
-                        <div class="wrap-input100 validate-input" data-validate="Password is required">
-                            <span class="label-input100">Confirm assword</span>
+                        <div class="wrap-input100 validate-input m-b-23" data-validate="Nhập lại mật khẩu đã hoàn thành">
+                            <span class="label-input100">Nhập lại mật khẩu</span>
                             <!-- <input class="input100" type="password" name="conf-pass" placeholder="Type your password again"> -->
                             {{ form.confirm_password }}
                             <span class="focus-input100" data-symbol="&#xf190;"></span>
                         </div>
-                        
-                        <!-- <div class="text-right p-t-8 p-b-31">
-                            <a href="#">
-                                Forgot password?
-                            </a>
-                        </div> -->
                         <div class="text-right p-t-8 p-b-31"></div>
                         
                         <div class="container-login100-form-btn">
                             <div class="wrap-login100-form-btn">
                                 <div class="login100-form-bgbtn"></div>
                                 <button class="login100-form-btn">
-                                    Create
+                                    Tạo tài khoản
                                 </button>
                             </div>
                         </div>
-        
-                        <div class="txt1 text-center p-t-54 p-b-20">
-                            <span>
-                                Or Signup Using
-                            </span>
-                        </div>
-        
-                        <div class="flex-c-m">
-                            <a href="#" class="login100-social-item bg1">
-                                <i class="fa fa-facebook"></i>
-                            </a>
-        
-                            <a href="#" class="login100-social-item bg2">
-                                <i class="fa fa-twitter"></i>
-                            </a>
-        
-                            <a href="#" class="login100-social-item bg3">
-                                <i class="fa fa-google"></i>
-                            </a>
-                        </div>
+                        
         
                         <div class="flex-col-c p-t-20">
                             <span class="txt1 p-b-17">
-                                Or Login Using
+                                Bạn đã có tài khoản?
                             </span>
-        
                             <a href="{% url 'dictionary:login' %}" class="txt2">
-                                Login
+                                Đăng nhập
                             </a>
                         </div>
                     </form>
