--- a/khodictionary/translate/templates/translate/translate.html
+++ b/khodictionary/translate/templates/translate/translate.html
@@ -64,99 +64,125 @@
           >
         </li>
       </ul>
-
-      <div class="my-3 p-3 bg-body rounded shadow-sm">
-        <!-- <h4 class="border-bottom pb-2 mb-0">Chọn ngôn ngữ</h4> -->
-        <div class="container">
-          <div class="row border-bottom pb-2 mb-0">
-            <div class="col-md-5">
-              <div class="header__user">
-                <p>Phát hiện ngôn ngữ</p>
-                <div class="menu-language">
-                  <ul id="menu-language">
-                    <li><a href="">Tiếng Việt</a></li>
-                    <li><a href="">Tiếng Kh'Ho</a></li>
-                  </ul>
-                </div>
-
-                <div class="user__language">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                    fill="currentColor"
-                    class="bi bi-chevron-down"
-                    viewBox="0 0 16 16"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"
-                    />
-                  </svg>
+      <form method="POST">
+        {% csrf_token %}
+        <div class="my-3 p-3 bg-body rounded shadow-sm">
+          <div class="container">
+            <div class="row border-bottom pb-2 mb-0">
+              <div class="col-md-6">
+                <div class="header__user">
+                  <div class="menu-language">
+                    <ul id="menu-language">
+                      <li><a href="">Tiếng Việt</a></li>
+                    </ul>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-2" style="text-align: center">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                class="bi bi-arrow-left-right"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M1 11.5a.5.5 0 0 0 .5.5h11.793l-3.147 3.146a.5.5 0 0 0 .708.708l4-4a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 11H1.5a.5.5 0 0 0-.5.5zm14-7a.5.5 0 0 1-.5.5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H14.5a.5.5 0 0 1 .5.5z"
-                />
-              </svg>
-            </div>
-            <div class="col-md-5">
-              <div class="header__user">
-                <div class="menu-language">
-                  <ul id="menu-language">
-                    <li><a href="">Tiếng Kh'Ho</a></li>
-                    <li><a href="">Tiếng Việt</a></li>
-                  </ul>
-                </div>
 
-                <div class="user__language">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                    fill="currentColor"
-                    class="bi bi-chevron-down"
-                    viewBox="0 0 16 16"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"
-                    />
-                  </svg>
+              <div class="col-md-6">
+                <div class="search-option">
+                  <input
+                    class="noi"
+                    type="submit"
+                    name="tiengkho"
+                    value="Tiếng K'Ho"
+                  />
+                  <input
+                    class="noi"
+                    type="submit"
+                    name="tiengchuru"
+                    value="Tiếng Churu"
+                  />
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <form action="" method="POST">
-          {% csrf_token %}
+          {% if not result %}
           <div class="translate">
             <div class="row">
               <div class="col-md-6">
-                <textarea class="border-hidden" name="" id="" cols="70" rows="10" value=""></textarea>
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-mic-fill mic" viewBox="0 0 16 16" style="color: #5f6368">
+                <textarea
+                  class="border-hidden"
+                  name="texttrans"
+                  id=""
+                  cols="70"
+                  rows="10"
+                ></textarea>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="20"
+                  height="20"
+                  fill="currentColor"
+                  class="bi bi-mic-fill mic"
+                  viewBox="0 0 16 16"
+                  style="color: #5f6368"
+                >
                   <path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0V3z" />
-                  <path d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z"/>
+                  <path
+                    d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z"
+                  />
                 </svg>
               </div>
+
               <div class="col-md-6 border-left pb-2 mb-0">
-                <textarea class="border-hidden" name="" id="" cols="70" rows="10" ></textarea>
+                <textarea
+                  class="border-hidden"
+                  name="translated"
+                  id=""
+                  cols="70"
+                  rows="10"
+                ></textarea>
               </div>
             </div>
           </div>
-        </form>
-      </div>
+          {% else %}
+          <div class="translate">
+            <div class="row">
+              <div class="col-md-6">
+                <textarea
+                  class="border-hidden"
+                  name="texttrans"
+                  id=""
+                  cols="70"
+                  rows="10"
+                >
+                {{ texttrans }}</textarea
+                >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="20"
+                  height="20"
+                  fill="currentColor"
+                  class="bi bi-mic-fill mic"
+                  viewBox="0 0 16 16"
+                  style="color: #5f6368"
+                >
+                  <path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0V3z" />
+                  <path
+                    d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z"
+                  />
+                </svg>
+              </div>
+              <div class="col-md-6 border-left pb-2 mb-0">
+                <textarea
+                  class="border-hidden"
+                  name="translated"
+                  id=""
+                  cols="70"
+                  rows="10"
+                >{{ result }} - {{ texttrans }}</textarea>
+              </div>
+            </div>
+          </div>
+          {% endif %}
+
+        
+        </div>
+        
+        
+        
+        
+      </form>
       <script>
         var SpeechRecognition = SpeechRecognition || webkitSpeechRecognition;
         var SpeechGrammarList = SpeechGrammarList || webkitSpeechGrammarList;
@@ -200,18 +226,20 @@
         recognition.onresult = function (event) {
           var color = event.results[0][0].transcript;
           var data =
-            '<div class="row">'+
-              '<div class="col-md-6">'+
-                '<textarea class="border-hidden" name="" id="" cols="70" rows="10" >' + color + '</textarea>'+
-                '<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-mic-fill mic" viewBox="0 0 16 16" style="color: #5f6368">'+
-                  '<path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0V3z" />'+
-                  '<path d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z"/>'+
-                '</svg>'+
-              '</div>'+
-              '<div class="col-md-6 border-left pb-2 mb-0">'+
-                '<textarea class="border-hidden" name="" id="" cols="70" rows="10" ></textarea>'+
-              '</div>'+
-            '</div>';
+            '<div class="row">' +
+            '<div class="col-md-6">' +
+            '<textarea class="border-hidden" name="" id="" cols="70" rows="10" >' +
+            color +
+            "</textarea>" +
+            '<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-mic-fill mic" viewBox="0 0 16 16" style="color: #5f6368">' +
+            '<path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0V3z" />' +
+            '<path d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z"/>' +
+            "</svg>" +
+            "</div>" +
+            '<div class="col-md-6 border-left pb-2 mb-0">' +
+            '<textarea class="border-hidden" name="" id="" cols="70" rows="10" ></textarea>' +
+            "</div>" +
+            "</div>";
 
           diagnostic.innerHTML = data;
           bg.style.backgroundColor = color;
@@ -224,8 +252,8 @@
 
         recognition.onspeechstart = function (event) {
           //Fired when speech starts
-          console.log('SpeechRecognition.onspeechstart');
-      }
+          console.log("SpeechRecognition.onspeechstart");
+        };
 
         recognition.onnomatch = function (event) {
           diagnostic.textContent = "I didn't recognise that color.";
